--- a/workflow/Fasta_GC_TRF_CpG.yml
+++ b/workflow/Fasta_GC_TRF_CpG.yml
@@ -5,3 +5,14 @@ step: "5"
 outformat: "wiggle"
 omittail: "-ot"
 singlefile: "-one"
+match: "2"
+mismatch: "5"
+delta: "7"
+PM: "80"
+PI: "10"
+minscore: "40"
+maxperiod: "500"
+flanking_sequence: "-f"
+data_file: "-d"
+masked_sequence: "-m"
+suppress_html: "-h"
